--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,10 +11,11 @@
     <link rel="stylesheet" type="text/css" href="/css/socializer.min.css">
     <link rel="stylesheet" href="/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto|Source+Sans+Pro" rel="stylesheet">
+
     <!-- Custom styles for this template -->
     <link href="/css/main.css" rel="stylesheet">
     <style>
-        .body-content{
+        .body-content {
             display: none;
         }
     </style>
@@ -22,29 +23,31 @@
 
 <body data-spy="scroll" data-target="#navigation-bar">
 
-<div id="loader">
-    <span>{</span><span>}</span>
-</div>
+    <div id="loader">
+        <span>{</span><span>}</span>
+    </div>
 
-<div class="body-content">
-    {{ content }}
-</div>
+    <div class="body-content">
+        {{ content }}
+    </div>
 
-<!-- Bootstrap core JavaScript
-================================================== -->
-<!-- Placed at the end of the document so the pages load faster -->
-<script src="/js/jquery-3.2.1.min.js"></script>
-<script src="/js/tether.min.js"></script>
-<script src="/js/bootstrap.min.js"></script>
-<script src="/js/sticky-header.js"></script>
-<script src="/js/smooth-scrolling.js"></script>
-<script src="/js/jquery.isotope.js"></script>
-<script src="/js/custom.js"></script>
-<script src="/js/socializer.min.js"></script>
-<script>
-    (function(){
-        socializer( '.socializer' );
-    }());
-</script>
+    <!-- Bootstrap core JavaScript -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="/js/jquery-3.2.1.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/sticky-header.js"></script>
+    <script src="/js/smooth-scrolling.js"></script>
+    <script src="/js/jquery.isotope.js"></script>
+    <script src="/js/custom.js"></script>
+    <script src="/js/socializer.min.js"></script>
+    <script src="/js/tether.min.js"></script>
+
+    <script>
+        (function () {
+            socializer('.socializer');
+        }());
+    </script>
+
 </body>
+
 </html>
