--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,11 @@
 
 <div id="hire">
-    <div class="contianer">
+    <div class="container">
         <ul class="nav justify-content-end">
 
             <li class="nav-item">
                 <button class="btn" type="button" id="hireme">
-                    <a class="hire-link active" href="mailto: {{site.email}}"> <i class="fa fa-paper-plane"> </i>   HIRE ME</a>
+                    <a class="hire-link active" href="mailto: {{site.email}}"> <i class="fa fa-paper-plane"> </i>   E-Mail Me</a>
                 </button>
             </li>
 
