--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -4,19 +4,23 @@
     <h3 class="section-heading text-center "> Get in Touch</h3>
     <div class="row contact-section">
         <div class="col-md-2 image">
+            <img src="/images/profile.jpg " alt="Profile Image" class="rounded-circle mx-auto d-block img-fluid profile-pic ">
+            <p class="text-center padding-top-5">Gary</p>
         </div>
 
         <div class="col-md-10">
-            <p class="text-justify description ">
-                Contact Me!</p>
+       
+                
 
             <p class="thanks theme-color padding-top-10"> Many Thanks :) </p>
 
-            
+            <p class=" padding-top-5 helping-line">I can help with the following:</p>
+              
 
-                    
+                </ul>
+                <span>Happy to learn New Things on demand of Technology </span>
 
-            <p class="text-left info">Drop me line at <span class="theme-color"> <a href="mailto: taffgal@gmail.com">taffgal@gmail.com</a> </span> or call me at <span class="theme-color"> 978-624-8441</span></p>
+            <p class="text-left info">Drop me line at <span class="theme-color"> <a href="mailto: taffgal@gmail.com">taffgal@gmail.com</a> </span> or call me at <span class="theme-color"> 978-624-8441 </span></p>
             <div class="social-media">
                 {% include social.html social= site.data.profile.social %}
             </div>
