--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,20 +3,16 @@
         <div class="col-md-4">
             <ul class="list-unstyled">
 
-                <li class="padding-top-3">
-                    <i class="fa fa-globe padding-right-10"></i> <a href="https://blackode.in">blackode.in</a>
+              <li class="padding-top-3">
+                    <i class="fa fa-envelope padding-right-10"></i> <a href="mailto: taffgal@gmail.com">taffgal@gmail.com</a>
                 </li>
 
                 <li class="padding-top-3">
-                    <i class="fa fa-envelope padding-right-10"></i> <a href="mailto: hello@blackode.in">hello@blackode.in</a>
+                    <i class="fa fa-phone padding-right-10"></i> 978-624-8441
                 </li>
 
                 <li class="padding-top-3">
-                    <i class="fa fa-phone padding-right-10"></i> 0 9494 5072 87
-                </li>
-
-                <li class="padding-top-3">
-                    <i class="fa fa-map-marker padding-right-10"></i> Anantapuramu - India
+                    <i class="fa fa-map-marker padding-right-10"></i> Gallatin TN
                 </li>
 
             </ul>
@@ -30,14 +26,6 @@
                 </li>
 
                 <li class="padding-top-3">
-                    <a href="#skills">Skills</a>
-                </li>
-
-                <li class="padding-top-3">
-                    <a href="#portfolio">Portfolio</a>
-                </li>
-
-                <li class="padding-top-3">
                     <a href="#education">Education</a>
                 </li>
 
@@ -47,27 +35,6 @@
 
             </ul>
         </div>
-
-        <div class="col-md-4 float-right padding-left-50">
-            <ul class="list-unstyled">
-                <li class="padding-top-3">
-                    <stronng> I'M </stronng>
-                </li>
-                <li class="padding-top-3">
-                    Full Stack Programmer
-                </li>
-
-                <li class="padding-top-3">
-                    Graphic Designer
-                </li>
-
-                <li class="padding-top-3">
-                    Technical Writer
-                </li>
-
-                <li class="padding-top-3">
-                    Youtuber
-                </li>
 
             </ul>
         </div>
