--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -5,14 +5,13 @@
     <div class="row contact-section">
         <div class="col-md-2 image">
             <img src="/images/profile.jpg " alt="Profile Image" class="rounded-circle mx-auto d-block img-fluid profile-pic ">
-            <p class="text-center padding-top-5">Gary Llewelyn</p>
+            <p class="text-center padding-top-5">Gary Llewellyn</p>
         </div>
 
         <div class="col-md-10">
         
 		<p class="thanks theme-color padding-top-10"> Many Thanks :) </p>
 
-            <p class=" padding-top-5 helping-line">I can help with the following:</p>
               <ul class="list-unstyled list">
 
             <p class="text-left info">Drop me line at <span class="theme-color"> <a href="mailto: taffgal@gmail.com">taffgal@gmail.com</a> </span> or call me at <span class="theme-color"> 978-624-8441 </span></p>
