--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,7 +19,7 @@
 
 <div id="profile-image">
 
-    <img class="rounded-circle mx-auto d-block img-fluid" src="/images/profile.jpg"></img>
+    <img class="rounded-circle mx-auto d-block img-fluid" src="/images/Profile.jpg"></img>
     <h1 class="profile-name "> {{ site.data.profile.name}} </h1>
     <h1 class="profile-title text-center"> {{ site.data.profile.title }} </h1>
 
