Update education details in education.html

--- a/_includes/education.html
+++ b/_includes/education.html
@@ -3,8 +3,8 @@
         <h3 class="university theme-color">
             <i class="fa fa-university"> </i>
         </h3>
-        <h3 class="university theme-color">Workforce Essentials INC</h3>
-        <h4 class="year">HiSET Certification</h4>
-        <h4 class="year">2007 </h4>
+        <h3 class="university theme-color">Strayer University</h3>
+        <h4 class="year">BA Information Technolgy</h4>
+        <h4 class="year">2025 - Present </h4>
     </div>
 </div>
