Correct degree title to 'BA in Information Technology'

--- a/_includes/education.html
+++ b/_includes/education.html
@@ -4,7 +4,7 @@
             <i class="fa fa-university"> </i>
         </h3>
         <h3 class="university theme-color">Strayer University</h3>
-        <h4 class="year">BA Information Technolgy</h4>
+        <h4 class="year">BA in Information Technolgy</h4>
         <h4 class="year">2025 - Present </h4>
     </div>
 </div>
