Simplify contact information layout
Removed unnecessary contact section and streamlined the contact information display.

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,28 +1,10 @@
+<div class="col-md-8 text-center">
+  <p class="info">
+    E‑Mail me at <span class="theme-color"><a href="mailto:gary@garyllewellyn.us">gary@garyllewellyn.us</a></span>
+    or call me at <span class="theme-color">978-624-8441</span>
+  </p>
 
-
-<div class="container">
-    <h3 class="section-heading text-center "> Get in Touch</h3>
-    <div class="row contact-section">
-        <div class="col-md-2 image">
-            <img src="/images/Profile.jpg " alt="Profile Image" class="rounded-circle mx-auto d-block img-fluid profile-pic ">
-            <p class="text-center padding-top-5">Gary Llewellyn</p>
-        </div>
-
-
-              
-            
-            <ul class="list-unstyled list">
-
-            
-                   <p class="text-left info">E-Mail me at <span class="theme-color"> <a href="mailto: gary@garyllewellyn.us">gary@garyllewellyn.us</a> </span> or call me at <span class="theme-color"> 978-624-8441 </span></p>
-            <div class="social-media">
-                {% include social.html social= site.data.profile.social %}
-            </div>
-
-        </div>
-
-    </div>
-
-
-
+  <div class="social-media">
+    {% include social.html social=site.data.profile.social %}
+  </div>
 </div>
